fixed the right side of 09's not fitting the entire page

--- a/Nia's Website/css/styles.css
+++ b/Nia's Website/css/styles.css
@@ -170,6 +170,14 @@ a:link {
     white-space: nowrap;
 }
 
+.about-body .selfie-nines .boxed-nines div{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 3rem;
+
+}
+
+
 .about-body .info{
     flex: 4;
     display: flex;
@@ -210,11 +218,19 @@ a:link {
     flex-grow: 0 auto;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     /*background-color: green; */
-    font-size: 1rem;
     white-space: nowrap;
 }
+
+.about-body .nines div {
+    font-size: 0.7rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 1vh;
+}
+
 
 .about-body ul {
     margin-top: -1em;
